--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ img {
   border-bottom-color: #ececec;
   background-color: var(--primari-bg-color);
 
-  outline: auto;
+  /* outline: auto; */
 }
 .header-navigation {
   width: 294px;
@@ -110,6 +110,17 @@ img {
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
+.logo-link-footer {
+  width: 145px;
+  padding: 24px 0px 25px 0px;
+  margin-right: 93px;
+  color: var(--accent-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
 .logo-header {
   margin-right: 93px;
   color: var(--button-text-color);
@@ -147,7 +158,7 @@ img {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
 
-  outline: auto;
+  /* outline: auto; */
 }
 
 .contakts-item-link:hover,
@@ -163,7 +174,7 @@ img {
   background-color: var(--primari-hero-color);
   margin-bottom: 94px;
 
-  outline: 1px solid #f70404;
+  /* outline: 1px solid #f70404; */
 }
 
 .hero-title {
@@ -221,7 +232,7 @@ img {
   margin-top: 0px;
   margin-bottom: 94px;
 
-  outline: 1px solid #f70404;
+  /* outline: 1px solid #f70404; */
 }
 .feutures-item {
   display: block;
