--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ img {
   margin-right: 0px;
 }
 
-.header-item: {
+.header-item {
   display: flex;
   flex-direction: column;
   flex-direction: row;
@@ -88,8 +88,8 @@ img {
   width: 135px;
   margin-right: 50px;
 }
-.contakts-item-tel {
-}
+/* .contakts-item-tel {
+} */
 
 /* .contakts-item {
   display: flex;
@@ -112,14 +112,13 @@ img {
 }
 .logo-link-footer {
   width: 145px;
-  padding: 24px 0px 25px 0px;
-  margin-right: 93px;
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
 }
 .logo-header {
   margin-right: 93px;
@@ -147,8 +146,8 @@ img {
   color: var(--accent-color);
 }
 /* адрес телефон шапка */
-.contacs {
-}
+/* .contacs {
+} */
 .contakts-item-link {
   display: block;
 
@@ -295,9 +294,10 @@ img {
 .team-item-img:last-of-type {
   margin-right: 0px;
 }
-/* .tiam-section {
-  margin: 290px 59px 59px 60px;
-} */
+.tiam-section {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
 .team-title {
   color: var(--title-text-color);
@@ -306,7 +306,6 @@ img {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-top: 30px;
   margin-bottom: 10px;
 }
 
@@ -320,12 +319,18 @@ img {
 }
 /* подвал */
 .footer {
-  padding-top: 64px;
+  padding-top: 60px;
   padding-bottom: 56px;
   background-color: var(--primari-hero-color);
 }
+.foot {
+  display: flex;
+  flex-direction: column;
+}
 
 .address {
+  display: block;
+  width: 231px;
   text-decoration: none;
   font-style: normal;
 }
@@ -337,6 +342,9 @@ img {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+}
+.address-item:nth-child(-n + 2) {
+  margin-bottom: 9px;
 }
 .address-link {
   color: #ffffff;
@@ -354,8 +362,38 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+/* секция портфолио */
+.section-portfolio {
+  margin-top: 98px;
+}
+
 /* кнопки портфолио */
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.filter-item {
+  margin-right: 8px;
+}
+
 .filter-button {
+  padding: 6px 22px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  color: var(--title-text-color);
+  background: var(--section-team-button);
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* .filter-button {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   background: var(--section-team-button);
   cursor: pointer;
   color: var(--title-text-color);
@@ -364,19 +402,42 @@ img {
   line-height: 1.63;
   text-align: center;
   letter-spacing: 0.03em;
-}
+} */
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--accent-color);
   color: var(--primari-bg-color);
 }
 /* ссылки портфолио */
+.project {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 94px;
+}
+.project-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.project-item:nth-child(3n + 3) {
+  margin-right: 0px;
+  margin-bottom: 30px;
+}
+.project-link > img {
+  margin-bottom: 20px;
+}
+
+.porjekt-section {
+  margin-bottom: 20px;
+}
+
 .project-title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 .project-text {
   color: var(--primary-text-color);
